[project]
name = "team_plus"
version = "0.1.2"
description = "Default template for PDM package"
authors = [
    {name = "hahahellooo", email = "hahahello777@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true


[project.scripts]
t_sum = "team_plus.team_plus:main"
